gcc/testsuite/rust/rustc/ui/issues/issue-30730.rs
#![warn(unused)]
#![deny(warnings)]
use std::thread;
// { dg-error "" "" { target *-*-* } .-1 }
fn main() {}

